<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="com.example.coonax.coonax.ui.MenuActivity"
                android:background="@color/white">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="420dp"
            android:layout_marginRight="120dp"
            android:layout_marginLeft="120dp"
            android:background="@color/amethyst"
            android:id="@+id/linearLayout3">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/text_price_menu"
                android:id="@+id/text_price_menu"
                android:textSize="38dp"
                android:gravity="center_vertical|center|center_horizontal"/>
    </LinearLayout>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="90dp"
            android:layout_marginBottom="270dp"
            android:id="@+id/linearLayout4">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:measureWithLargestChild="false"
                android:background="@color/amethyst_dark">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/text_entree_menu"
                    android:id="@+id/text_entree_menu"
                    android:textColor="@color/white"
                    android:gravity="center_vertical|center|center_horizontal"
                    android:textSize="20dp"/>
        </LinearLayout>

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="74dp"
                android:background="@color/amethyst">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/text__value_entree_menu"
                    android:id="@+id/text_value_entree_menu"
                    android:textColor="@color/white"
                    android:gravity="center"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_alignTop="@+id/linearLayout4"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="130dp"
            android:layout_marginBottom="140dp"
            android:weightSum="1">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:background="@color/amethyst_dark">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/text_plat_menu"
                    android:id="@+id/text_plat_menu"
                    android:textColor="@color/white"
                    android:textSize="20dp"
                    android:gravity="center|center_horizontal"/>
        </LinearLayout>

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="74dp"
                android:background="@color/amethyst">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/text_value_plat_menu"
                    android:id="@+id/text_value_plat_menu"
                    android:textColor="@color/white"
                    android:gravity="center|center_horizontal"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="350dp">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/amethyst_dark">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/text_dessert_menu"
                    android:id="@+id/text_dessert_menu"
                    android:textColor="@color/white"
                    android:textSize="20dp"
                    android:gravity="center|center_horizontal"/>
        </LinearLayout>

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="74dp"
                android:background="@color/amethyst">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/text_value_dessert_menu"
                    android:id="@+id/text_value_dessert_menu"
                    android:gravity="center_vertical|center"
                    android:textColor="@color/white"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
